# shiori-kushami-generator

./: .gitignore  CMakeLists.txt  CustomWidget.cpp  CustomWidget.h  CustomWidget.hpp  CustomWindow.cpp  CustomWindow.hpp  MainFrame.cpp  MainFrame.hpp  Makefile  Makefile_Linux  Makefile_OSX  README.md  TrayMenu.cpp  TrayMenu.hpp  main.cpp
Component/: MainWidget.cpp  MainWidget.hpp  StartButton.cpp  StartButton.hpp
Component/KushamiFunc/: KushamiSE.cpp  KushamiSE.hpp  RandGen.cpp  RandGen.hpp  Timer.cpp  Timer.hpp
Component/NumberOnlyInput/: NumEntry.cpp  NumEntry.hpp
res/: res_pointer.cpp  se_pointer.h  se_resources.h
res/qt_resources/: kushamiResQt.cpp
